include/Win32/Physics.NGDImport.hpp

struct NewtonUserMeshCollisionCollideDesc;
struct NewtonUserMeshCollisionRayHitDesc;
//-- type declarations -------------------------------------------------------
typedef float dFloat;
typedef float *PdFloat;
typedef short *PShort;
typedef void * PNewtonMesh;
typedef void * PNewtonBody;
typedef void * PNewtonWorld;
typedef void * PNewtonCollision;
typedef void * PNewtonSceneProxy;
typedef void * PNewtonBreakableComponentMesh;
typedef TNewtonCollisionInfoRecord *PNewtonCollisionInfoRecord;
typedef NewtonUserMeshCollisionCollideDesc *PNewtonUserMeshCollisionCollideDesc;
struct DECLSPEC_DRECORD NewtonUserMeshCollisionCollideDesc
{
public:
	System::StaticArray<float, 4> m_boxP0;
	System::StaticArray<float, 4> m_boxP1;
	System::StaticArray<float, 4> m_boxDistanceTravel;
	int m_threadNumber;
	int m_faceCount;
	int m_vertexStrideInBytes;
	float m_skinThickness;
	void *m_userData;
	void *m_objBody;
	void *m_polySoupBody;
	void *m_objCollision;
	void *m_polySoupCollision;
	float *m_vertex;
	int *m_faceIndexCount;
	int *m_faceVertexIndex;
};
typedef NewtonUserMeshCollisionRayHitDesc *PNewtonUserMeshCollisionRayHitDesc;
struct DECLSPEC_DRECORD NewtonUserMeshCollisionRayHitDesc
{
public:
	System::StaticArray<float, 4> m_p0;
	System::StaticArray<float, 4> m_p1;
	System::StaticArray<float, 4> m_normalOut;
	int m_userIdOut;
	void *m_userData;
};
typedef void __cdecl (*NewtonUserMeshCollisionDestroyCallback)(void * descData);
typedef void __cdecl (*NewtonUserMeshCollisionCollideCallback)(PNewtonUserMeshCollisionCollideDesc NewtonUserMeshCollisionCollideDesc);
typedef int __cdecl (*NewtonUserMeshCollisionRayHitCallback)(PNewtonUserMeshCollisionRayHitDesc NewtonUserMeshCollisionRayHitDesc);
typedef void __cdecl (*NewtonUserMeshCollisionGetCollisionInfo)(void * userData, PNewtonCollisionInfoRecord infoRecord);
typedef int __cdecl (*NewtonUserMeshCollisionGetFacesInAABB)(void * userData, const PdFloat p0, const PdFloat p1, const PdFloat vertexArray, System::PInteger vertexCount, System::PInteger vertexStrideInBytes, const System::PInteger indexList, int maxIndexCount, const System::PInteger userDataList);
typedef System::DynamicArray<void *> TCollisionPrimitiveArray;
//-- var, const, procedure ---------------------------------------------------
#define NewtonDLL L"newton32.dll"
extern "C" int __cdecl NewtonConvexHullGetFaceIndices(const void * convexHullCollision, int face, System::PInteger faceIndices);
extern "C" float __cdecl NewtonConvexCollisionCalculateVolume(const void * convexCollision);
extern "C" void __cdecl NewtonConvexCollisionCalculateInertialMatrix(const void * convexCollision, PdFloat inertia, PdFloat origin);
extern "C" void __cdecl NewtonCollisionMakeUnique(const void * NewtonWorld, const void * collision);
extern "C" void __cdecl NewtonReleaseCollision(const void * NewtonWorld, const void * collision);
extern "C" int __cdecl NewtonAddCollisionReference(const void * collision);
extern "C" void * __cdecl NewtonCreateCompoundCollision(const void * NewtonWorld, int count, const TCollisionPrimitiveArray collisionPrimitiveArray, int shapeID);
extern "C" void * __cdecl NewtonCreateCompoundCollisionFromMesh(const void * NewtonWorld, const void * Mesh, int maxSubShapesCount, int shapeID, int subShapeID);
extern "C" void * __cdecl NewtonCreateUserMeshCollision(const void * NewtonWorld, const PdFloat minBox, const PdFloat maxBox, void * userData, NewtonUserMeshCollisionCollideCallback collideCallback, NewtonUserMeshCollisionRayHitCallback rayHitCallback, NewtonUserMeshCollisionDestroyCallback destroyCallback, NewtonUserMeshCollisionGetCollisionInfo getInfoCallback, NewtonUserMeshCollisionGetFacesInAABB facesInAABBCallback, int shapeID);
extern "C" void * __cdecl NewtonCreateSceneCollision(const void * NewtonWorld, int shapeID);
extern "C" void * __cdecl NewtonSceneCollisionCreateProxy(void * scene, void * collision);
extern "C" void __cdecl NewtonSceneCollisionDestroyProxy(void * scene, void * Proxy);
extern "C" void __cdecl NewtonSceneProxySetMatrix(void * Proxy, const PdFloat matrix);
extern "C" void __cdecl NewtonSceneProxyGetMatrix(void * Proxy, PdFloat matrix);
extern "C" void __cdecl NewtonSceneSetProxyUserData(const void * Proxy, void * userData);
extern "C" void * __cdecl NewtonSceneGetProxyUserData(const void * Proxy);
extern "C" void * __cdecl NewtonSceneGetFirstProxy(const void * scene);
extern "C" void * __cdecl NewtonSceneGetNextProxy(const void * scene, const void * Proxy);
extern "C" void __cdecl NewtonSceneCollisionOptimize(void * scene);
extern "C" void * __cdecl NewtonCreateCompoundBreakable(const void * NewtonWorld, int meshCount, const void * SolidsArray, const System::PInteger ShapeIDArray, PdFloat Densities, System::PInteger internalFaceMaterial, int shapeID, int debrisID, float DebrisSeparationGap);
extern "C" void __cdecl NewtonCompoundBreakableResetAnchoredPieces(const void * compoundBreakable);
extern "C" void __cdecl NewtonCompoundBreakableSetAnchoredPieces(const void * compoundBreakable, int fixshapesCount, PdFloat matrixPallete, void * fixedShapesArray);
extern "C" int __cdecl NewtonCompoundBreakableGetVertexCount(const void * compoundBreakable);
extern "C" void __cdecl NewtonCompoundBreakableGetVertexStreams(const void * compoundBreakable, int vertexStrideInByte, PdFloat vertex, int normalStrideInByte, PdFloat normal, int uvStrideInByte, PdFloat uv);
extern "C" void * __cdecl NewtonBreakableGetMainMesh(const void * compoundBreakable);
extern "C" void * __cdecl NewtonBreakableGetFirstComponent(const void * compoundBreakable);
extern "C" void * __cdecl NewtonBreakableGetNextComponent(const void * component);
extern "C" void __cdecl NewtonBreakableBeginDelete(const void * compoundBreakable);
extern "C" void * __cdecl NewtonBreakableCreateDebrieBody(const void * compoundBreakable, const void * component);
extern "C" void __cdecl NewtonBreakableDeleteComponent(const void * compoundBreakable, const void * component);
extern "C" void __cdecl NewtonBreakableEndDelete(const void * compoundBreakable);
extern "C" int __cdecl NewtonBreakableGetComponentsInRadius(const void * compoundBreakable, const PdFloat position, float radius, void * Segments, int maxCount);
extern "C" void * __cdecl NewtonBreakableGetFirstSegment(const void * BreakableComponent);
extern "C" void * __cdecl NewtonBreakableGetNextSegment(const void * Segment);
extern "C" int __cdecl NewtonBreakableSegmentGetMaterial(const void * Segment);
extern "C" int __cdecl NewtonBreakableSegmentGetIndexCount(const void * Segment);
extern "C" int __cdecl NewtonBreakableSegmentGetIndexStream(void * compoundBreakable, const void * MeshOwner, const void * Segment, System::PInteger index);
extern "C" int __cdecl NewtonBreakableSegmentGetIndexStreamShort(void * compoundBreakable, const void * MeshOwner, const void * Segment, PShort index);